--- a/chapter9.css
+++ b/chapter9.css
@@ -3,3 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  height: 50px;
+  background-color: #ff9a4b;
+}
+
+main {
+  width: 960px;
+  margin: 50px auto;
+}
+
+footer {
+  height: 50px;
+  background-color: #aaaaaa;
+}
