--- a/chapter9.css
+++ b/chapter9.css
@@ -12,6 +12,48 @@ header {
 main {
   width: 960px;
   margin: 50px auto;
+  display: flex;
+}
+
+.step-box {
+  width: 300px;
+  margin-right: 30px;
+  padding: 10px;
+  position: relative;
+  background-color: #eeeeee;
+}
+
+.step-img1 {
+  background-image: url(img/flow01.png);
+  background-position: bottom;
+  background-size: cover;
+  height: 150px;
+}
+
+.step-img2 {
+  background-image: url(img/flow02.png);
+  background-position: bottom;
+  background-size: cover;
+  height: 150px;
+}
+
+.step-img3 {
+  background-image: url(img/flow03.png);
+  background-position: bottom;
+  background-size: cover;
+  height: 150px;
+}
+
+.step-label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #ff9a4b;
+  color: #fff;
+}
+
+.title {
+  margin: 15px 0 5px;
 }
 
 footer {
